--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
+    "flowbite-react": "^0.10.2",
+    "keen-slider": "^6.8.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.1.1"
+    "react-icons": "^5.4.0",
+    "react-router": "^7.1.1",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
