--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
+    "@tanstack/react-query": "^5.64.1",
+    "axios": "^1.7.9",
     "flowbite-react": "^0.10.2",
     "keen-slider": "^6.8.6",
     "react": "^18.3.1",
