--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.3.1",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
+    "firebase": "^11.1.0",
     "flowbite-react": "^0.10.2",
     "keen-slider": "^6.8.6",
     "react": "^18.3.1",
