--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "keen-slider": "^6.8.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^6.3.0"
