--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.1",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -38,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.0",
+    "sass-embedded": "^1.83.4",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
