--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^6.3.0",
     "sweetalert2": "^11.15.10"
