--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "flowbite-react": "^0.10.2",
     "keen-slider": "^6.8.6",
     "react": "^18.3.1",
+    "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^6.3.0",
+    "recharts": "^2.15.1",
     "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
